Replace participant goals with new entries
Updated participant goals with new information.

--- a/index.html
+++ b/index.html
@@ -127,10 +127,8 @@
     <hr>
 
     <p>
-      Анна — копит на квартиру: 10 000 €<br>
-      Сергей — строит дом: 20 000 €<br>
-      Ирина — мечтает о даче: 8 000 €<br>
-      Михаил — покупает участок: 12 000 €
+      Евгений — копит на собственный дом в Венгрии: 20 000 €<br>
+      Уже сделал первый взнос: 13 €.
     </p>
 
     <div class="actions">
@@ -138,6 +136,8 @@
     </div>
   </div>
 </section>
+
+  
 
 
 <!-- PRINCIPLES -->
