Update queue table with new data

--- a/queue.html
+++ b/queue.html
@@ -108,37 +108,16 @@
       </tr>
     </thead>
 
-    <tbody>
-
-      <!-- ПРИМЕР (удалишь позже) -->
-      <tr>
-        <td>1</td>
-        <td>А.Д.</td>
-        <td>Германия</td>
-        <td>Квартира</td>
-        <td>20 000€</td>
-        <td class="status waiting">⏳ Ожидание</td>
-      </tr>
-
-      <tr>
-        <td>2</td>
-        <td>М.К.</td>
-        <td>Польша</td>
-        <td>Дом</td>
-        <td>30 000€</td>
-        <td class="status priority">⭐ Приоритет</td>
-      </tr>
-
-      <tr>
-        <td>3</td>
-        <td>Л.С.</td>
-        <td>Австрия</td>
-        <td>Ремонт</td>
-        <td>10 000€</td>
-        <td class="status supporting">🔁 Участвует</td>
-      </tr>
-
-    </tbody>
+   <tbody>
+  <tr>
+    <td>1</td>
+    <td>Евгений</td>
+    <td>Венгрия</td>
+    <td>Дом</td>
+    <td>20 000 €</td>
+    <td class="status waiting">В очереди</td>
+  </tr>
+</tbody> 
   </table>
 </section>
 
