Update participant cards in participants.html

--- a/participants.html
+++ b/participants.html
@@ -22,24 +22,18 @@
     <h2 style="text-align:center; color:#2a8a5a;">🤝 Наши участники</h2>
     <p style="text-align:center; margin-bottom:30px;">Люди, которые уже присоединились к проекту и поделились своими мечтами 💚</p>
 
-    <!-- 🔽 Здесь будут карточки участников -->
-    <section id="participants-list" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px;">
-      
-      <!-- Пример карточки -->
-      <div class="participant" style="background:white; padding:15px; border-radius:12px; box-shadow:0 2px 5px rgba(0,0,0,0.1);">
-        <h3>Наталия</h3>
-        <p><strong>Мечта:</strong> Купить собственное жильё 🏡</p>
-        <p><strong>О себе:</strong> Работаю всю жизнь, но хочу поверить, что вместе мы сможем!</p>
-      </div>
+    <!-- Здесь будут карточки участников -->
+<section id="participants-list" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px;">
 
-      <div class="participant" style="background:white; padding:15px; border-radius:12px; box-shadow:0 2px 5px rgba(0,0,0,0.1);">
-        <h3>Анна</h3>
-        <p><strong>Мечта:</strong> Помочь сыну купить машину 🚗</p>
-        <p><strong>О себе:</strong> Верю, что доброта возвращается 💚</p>
-      </div>
+  <div class="participant" style="background:white; padding:15px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
+    <h3>Евгений</h3>
+    <p><strong>Страна:</strong> Венгрия</p>
+    <p><strong>Цель:</strong> Купить дом — 20 000 €</p>
+    <p><strong>Взнос:</strong> первый взнос 13 €</p>
+    <p><strong>О себе:</strong> Хочу показать, что честная взаимная помощь действительно работает, если люди объединяются.</p>
+  </div>
 
-      <!-- Ты можешь добавлять новые карточки вручную по тому же шаблону -->
-    </section>
+</section>
 
     <div style="text-align:center; margin-top:30px;">
       <a href="apply.html" style="background:#2a8a5a; color:white; padding:10px 20px; border-radius:10px; text-decoration:none;">📩 Подать заявку</a>
