--- a/reports-en.html
+++ b/reports-en.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Reports — Mutual Support Platform</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reports – Mutual Support Platform</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="dark-theme">
 
 <header>
-  <h1>Mutual&nbsp;Support&nbsp;Platform</h1>
+  <h1>Mutual Support Platform</h1>
   <nav>
     <a href="nataliahelp-en.html">Home</a>
-    <a href="queue.html">Participants</a>
-    <a href="apply.html">Join</a>
-    <a href="reports-en.html">Reports</a>
+    <a href="queue-en.html">Queue</a>
+    <a href="apply-en.html">Join</a>
+    <a href="reports-en.html" style="font-weight:bold;">Reports</a>
     <div class="lang-switch">
       <button onclick="window.location='reports.html'">RU</button>
       <button>EN</button>
@@ -28,15 +28,16 @@
 
     <h3>Transparency & Reports</h3>
 
-    <p>The Mutual Support Platform is open and honest.  
-       All movement of funds, issued support, and commission usage  
-       is publicly displayed for every participant to see.</p>
+    <p>The Mutual Support Platform operates openly and honestly.
+       All movement of funds, issued support and the use of commission
+       are publicly displayed here.</p>
 
-    <p>This section shows the current platform reports.  
-       As the community grows, the statistics will expand.</p>
+    <p>This section shows the current platform reports.
+       As the community grows, this page will expand automatically.</p>
 
     <hr style="border:0;border-bottom:1px solid var(--gold);margin:40px auto;width:60%">
 
+    <!-- Incoming contributions -->
     <h3>Incoming Contributions</h3>
 
     <table>
@@ -50,20 +51,15 @@
       </thead>
       <tbody>
         <tr>
-          <td>01.02.2025</td>
-          <td>PayPal</td>
-          <td>50</td>
-          <td>Donation</td>
-        </tr>
-        <tr>
-          <td>03.02.2025</td>
+          <td>29.11.2025</td>
           <td>Revolut</td>
-          <td>10</td>
+          <td>13</td>
           <td>Participant contribution</td>
         </tr>
       </tbody>
     </table>
 
+    <!-- Issued support -->
     <h3 style="margin-top:50px;">Issued Support</h3>
 
     <table>
@@ -76,15 +72,14 @@
         </tr>
       </thead>
       <tbody>
+        <!-- currently empty -->
         <tr>
-          <td>10.02.2025</td>
-          <td>Anna</td>
-          <td>Apartment</td>
-          <td>10 000</td>
+          <td colspan="4" style="text-align:center;">No issued support yet</td>
         </tr>
       </tbody>
     </table>
 
+    <!-- Commission usage -->
     <h3 style="margin-top:50px;">Platform Commission Usage</h3>
 
     <p>The commission is used only for technical and service-related needs:</p>
@@ -98,6 +93,7 @@
       <li>system stability monitoring.</li>
     </ul>
 
+    <!-- Commission table -->
     <table>
       <thead>
         <tr>
@@ -124,7 +120,7 @@
 
 <footer>
   <div class="container">
-    <p>© Mutual Support Platform — voluntary support for people</p>
+    <p>Mutual Support Platform — voluntary support for people</p>
   </div>
 </footer>
 
