Update participant goals and button text in HTML

--- a/nataliahelp-en.html
+++ b/nataliahelp-en.html
@@ -127,14 +127,12 @@
     <hr>
 
     <p>
-      Anna — saving for an apartment: 10,000 €<br>
-      Sergey — building a house: 20,000 €<br>
-      Irina — dreaming of a cottage: 8,000 €<br>
-      Mikhail — buying land: 12,000 €
+      Evgeny — saving for his own house in Hungary: 20,000 €<br>
+      First contribution already made: 13 €.
     </p>
 
     <div class="actions">
-      <a class="btn-primary" href="queue-en.html">View Queue</a>
+      <a class="btn-primary" href="queue-en.html">View the queue</a>
     </div>
   </div>
 </section>
