Update queue table with new entry
Replaced example data in the queue table with actual data.

--- a/queue-en.html
+++ b/queue-en.html
@@ -109,36 +109,15 @@
     </thead>
 
     <tbody>
-
-      <!-- EXAMPLE (ты потом удалишь и вставишь свои данные) -->
-      <tr>
-        <td>1</td>
-        <td>A.D.</td>
-        <td>Germany</td>
-        <td>Apartment</td>
-        <td>20 000€</td>
-        <td class="status waiting">⏳ Waiting</td>
-      </tr>
-
-      <tr>
-        <td>2</td>
-        <td>M.K.</td>
-        <td>Poland</td>
-        <td>House</td>
-        <td>30 000€</td>
-        <td class="status priority">⭐ Priority</td>
-      </tr>
-
-      <tr>
-        <td>3</td>
-        <td>L.S.</td>
-        <td>Austria</td>
-        <td>Renovation</td>
-        <td>10 000€</td>
-        <td class="status supporting">🔁 Supporting</td>
-      </tr>
-
-    </tbody>
+  <tr>
+    <td>1</td>
+    <td>Evheniy</td>
+    <td>Hungary</td>
+    <td>House</td>
+    <td>20 000 €</td>
+    <td class="status waiting">Waiting</td>
+  </tr>
+</tbody>
   </table>
 </section>
 
