--- a/participants.html
+++ b/participants.html
@@ -6,43 +6,58 @@
   <title>Наши участники | Natalia Help Project</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body style="background:#f6fff9; font-family:Arial, sans-serif; color:#2a2a2a;">
 
-  <header style="text-align:center; padding:20px;">
-    <h1>🌿 Natalia Help Project</h1>
-    <nav style="margin-top:10px;">
-      <a href="index.html">Главная</a> |
-      <a href="about.html">О проекте</a> |
-      <a href="apply.html">Подать заявку</a> |
-      <a href="participants.html" style="font-weight:bold; color:#2a8a5a;">Участники</a>
-    </nav>
-  </header>
+<header style="text-align:center; padding:20px;">
+  <h1>Natalia Help Project</h1>
+  <nav style="margin-top:10px;">
+    <a href="index.html">Главная</a> |
+    <a href="about.html">О проекте</a> |
+    <a href="apply.html">Подать заявку</a> |
+    <a href="participants.html" style="font-weight:bold; color:#2a8a5a;">Участники</a>
+  </nav>
+</header>
 
-  <main style="max-width:800px; margin:0 auto; padding:20px;">
-    <h2 style="text-align:center; color:#2a8a5a;">🤝 Наши участники</h2>
-    <p style="text-align:center; margin-bottom:30px;">Люди, которые уже присоединились к проекту и поделились своими мечтами 💚</p>
+<main style="max-width:800px; margin:0 auto; padding:20px;">
+  <h2 style="text-align:center; color:#2a8a5a;">Наши участники</h2>
+  <p style="text-align:center; margin-bottom:30px;">
+    Люди, которые уже присоединились к проекту.
+  </p>
 
-    <!-- Здесь будут карточки участников -->
-<section id="participants-list" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px;">
+  <!-- Карточка участников -->
+  <section id="participants-list" style="
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:20px;
+  ">
 
-  <div class="participant" style="background:white; padding:15px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.05);">
-    <h3>Евгений</h3>
-    <p><strong>Страна:</strong> Венгрия</p>
-    <p><strong>Цель:</strong> Купить дом — 20 000 €</p>
-    <p><strong>Взнос:</strong> первый взнос 13 €</p>
-    <p><strong>О себе:</strong> Хочу показать, что честная взаимная помощь действительно работает, если люди объединяются.</p>
-  </div>
-
-</section>
-
-    <div style="text-align:center; margin-top:30px;">
-      <a href="apply.html" style="background:#2a8a5a; color:white; padding:10px 20px; border-radius:10px; text-decoration:none;">📩 Подать заявку</a>
+    <div class="participant" style="
+          background:white;
+          padding:15px;
+          border-radius:12px;
+          box-shadow:0 2px 6px rgba(0,0,0,0.08);
+    ">
+      <h3>Евгений</h3>
+      <p><strong>Страна:</strong> Венгрия</p>
+      <p><strong>Цель:</strong> Купить дом — 20 000 €</p>
+      <p><strong>Взнос:</strong> первый взнос 13 €</p>
+      <p><strong>О себе:</strong> Хочу показать, что честная взаимная помощь действительно работает.</p>
     </div>
-  </main>
 
-  <footer style="text-align:center; margin-top:40px; padding:20px;">
-    <p>© 2025 Natalia Help Project | Вместе мы сильнее 💚</p>
-  </footer>
+  </section>
+
+  <div style="text-align:center; margin-top:30px;">
+    <a href="apply.html"
+       style="background:#2a8a5a; color:white; padding:10px 20px; border-radius:6px; text-decoration:none;">
+      Добавить себя
+    </a>
+  </div>
+</main>
+
+<footer style="text-align:center; margin-top:40px; padding:20px;">
+  © 2025 Natalia Help Project | Вместе мы сильнее
+</footer>
 
 </body>
 </html>
