Add participant section for Евген

--- a/participants.html
+++ b/participants.html
@@ -44,7 +44,18 @@
       <p><strong>Взнос:</strong> первый взнос 13 €</p>
       <p><strong>О себе:</strong> Хочу показать, что честная взаимная помощь действительно работает.</p>
     </div>
-
+<div class="participant" style="
+  background:white;
+  padding:15px;
+  border-radius:12px;
+  box-shadow:0 2px 6px rgba(0,0,0,0.08);
+">
+  <h3>Евген</h3>
+  <p><strong>Страна:</strong> — </p>
+  <p><strong>Цель:</strong> Другое — 700 €</p>
+  <p><strong>Взнос:</strong> — </p>
+  <p><strong>О себе:</strong> хочу исполнить заветную маму в виде браслета карты</p>
+</div>
   </section>
 
   <div style="text-align:center; margin-top:30px;">
