--- a/queue.html
+++ b/queue.html
@@ -117,6 +117,13 @@
     <td>20 000 €</td>
     <td class="status waiting">В очереди</td>
   </tr>
+   <tr>
+  <td>2</td>
+  <td>Evgen</td>
+  <td>—</td>
+  <td>700 €</td>
+  <td class="status waiting">В очереди</td>
+</tr>  
 </tbody> 
   </table>
 </section>
