--- a/queue-en.html
+++ b/queue-en.html
@@ -117,6 +117,14 @@
     <td>20 000 €</td>
     <td class="status waiting">Waiting</td>
   </tr>
+   <tr>
+  <td>2</td>
+  <td>Evgen</td>
+  <td>—</td>
+  <td>Other</td>
+  <td>700 €</td>
+  <td class="status waiting">Waiting</td>
+</tr>   
 </tbody>
   </table>
 </section>
