Add participant Evgen with details

--- a/participants-en.html
+++ b/participants-en.html
@@ -34,7 +34,18 @@
       <p><strong>Contribution:</strong> first payment 13 €</p>
       <p><strong>About:</strong> I want to show that honest mutual support really works.</p>
     </div>
-
+<div class="participant" style="
+  background:white;
+  padding:15px;
+  border-radius:12px;
+  box-shadow:0 2px 6px rgba(0,0,0,0.08);
+">
+  <h3>Evgen</h3>
+  <p><strong>Country:</strong> —</p>
+  <p><strong>Goal:</strong> Other — 700 €</p>
+  <p><strong>Contribution:</strong> 0 €</p>
+  <p><strong>About:</strong> Wants to fulfill a cherished wish for his mother in the form of a card bracelet.</p>
+</div>
   </section>
 
   <div style="text-align:center; margin-top:30px;">
