Update country name in queue.html

--- a/queue.html
+++ b/queue.html
@@ -120,7 +120,7 @@
    <tr>
   <td>2</td>
   <td>Evgen</td>
-  <td>—</td>
+  <td>Украина</td>
   <td>700 €</td>
   <td class="status waiting">В очереди</td>
 </tr>  
