Update queue status and add country information

--- a/queue-en.html
+++ b/queue-en.html
@@ -120,11 +120,15 @@
    <tr>
   <td>2</td>
   <td>Evgen</td>
-  <td>—</td>
+  <td>Ukraine</td>
   <td>Other</td>
   <td>700 €</td>
-  <td class="status waiting">Waiting</td>
-</tr>   
+  <td class="status waiting">In queue</td>
+</tr>
+
+
+
+  
 </tbody>
   </table>
 </section>
