Update names and country in queue.html

--- a/queue.html
+++ b/queue.html
@@ -117,13 +117,14 @@
     <td>20 000 €</td>
     <td class="status waiting">В очереди</td>
   </tr>
-   <tr>
+      <tr>
   <td>2</td>
-  <td>Evgen</td>
+  <td>Евген</td>
   <td>Украина</td>
+  <td>Другое</td>
   <td>700 €</td>
   <td class="status waiting">В очереди</td>
-</tr>  
+</tr>
 </tbody> 
   </table>
 </section>
