Add section for early participant support in index.html
Added a new section promoting early participant support for the NHP project.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,35 @@
     </div>
   </div>
 </div>
+<section style="padding: 60px 20px; background: #f7f9ff; border-radius: 12px; max-width: 900px; margin: 60px auto; text-align: center; font-family: 'Inter', sans-serif;">
+    
+    <h2 style="font-size: 32px; font-weight: 700; margin-bottom: 20px; color:#222;">
+        Получи помощь первым — помоги другому после
+    </h2>
 
+    <p style="font-size: 18px; line-height: 1.6; max-width: 750px; margin: 0 auto 20px; color:#444;">
+        Мы открываем <strong>50 мест для первых участников</strong> проекта NHP. 
+        Это формирует основное ядро сообщества. Сначала помощь приходит <strong>к тебе</strong>, 
+        а когда ты достигаешь результата — ты помогаешь следующему участнику.
+    </p>
+
+    <p style="font-size: 18px; line-height: 1.6; max-width: 750px; margin: 0 auto 30px; color:#444;">
+        Помощь не появляется из воздуха — она складывается из <strong>вкладов участников</strong>. 
+        Небольшие взносы многих превращаются в ощутимую поддержку одному человеку. 
+        Это честная круговая модель взаимной помощи.
+    </p>
+
+    <div style="margin-top: 35px;">
+        <a href="apply.html" 
+        style="background:#3b5cff; color:#fff; padding: 15px 35px; border-radius: 8px; 
+        text-decoration: none; font-size:20px; font-weight:600; display:inline-block; transition:0.3s;">
+            Стать одним из 50
+        </a>
+        <p style="margin-top: 12px; font-size: 14px; color:#555;">
+            (Первые участники получают приоритет в очереди помощи)
+        </p>
+    </div>
+</section>
 
 <!-- ABOUT -->
 <section id="about" class="section">
