--- a/index.html
+++ b/index.html
@@ -111,7 +111,42 @@
         </p>
     </div>
 </section>
+<section style="padding: 70px 20px; background: #f7f9ff; border-radius: 14px; max-width: 900px; margin: 70px auto; text-align: center;">
 
+    <h2 style="font-size: 34px; font-weight: 700; color:#222; margin-bottom: 15px;">
+        Получи помощь первым — помоги другому после
+    </h2>
+
+    <div style="display:flex; justify-content:center; gap:35px; margin:25px 0 30px; flex-wrap:wrap; font-size:18px; color:#222; font-weight:600;">
+        <span>Сначала помощь приходит к тебе</span>
+        <span>→</span>
+        <span>Потом ты поддерживаешь другого</span>
+        <span>→</span>
+        <span>Честная круговая модель</span>
+    </div>
+
+    <p style="font-size:19px; line-height:1.6; color:#444; max-width:760px; margin:0 auto 15px;">
+        Я создала NHP, потому что сама иду к своей цели и знаю, как трудно идти одной. 
+        Здесь мы помогаем друг другу сделать первый шаг быстрее.
+    </p>
+
+    <p style="font-size:18px; line-height:1.6; color:#444; max-width:760px; margin:0 auto 35px;">
+        Вступление простое: ты присоединяешься в чат, знакомишься с проектом, 
+        а взнос — <strong>любой по возможностям</strong>. 
+        Получив поддержку, ты передаёшь её дальше — так движется наш круг.
+    </p>
+
+    <a href="https://t.me/..." target="_blank"
+    style="background:#3b5cff; padding:15px 40px; border-radius:10px; 
+    color:#fff; font-size:21px; font-weight:700; text-decoration:none; display:inline-block;">
+        Вступить в чат сообщества
+    </a>
+
+    <p style="font-size:15px; color:#555; margin-top:12px;">
+        (Первым участникам — приоритет на получение помощи)
+    </p>
+
+</section>
 <!-- ABOUT -->
 <section id="about" class="section">
   <div class="container">
